--- a/src/main.css
+++ b/src/main.css
@@ -8,6 +8,10 @@
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css");
 @import url("https://codedotspectra.github.io/themes/core/settings-icons.css");
 @import url("https://mwittrien.github.io/BetterDiscordAddons/Themes/SettingsModal/SettingsModal.css");
+@import url("https://nyri4.github.io/Comfy/betterdiscord/better-spotify.css");
+@import url("https://discord-custom-covers.github.io/usrbg/dist/usrbg.css");
+@import url("https://monstrousdev.github.io/themes/addons/user-tags.css");
+
 :root {
   /** Number of role columns */
   --roleslist-columns: 2;
@@ -409,4 +413,117 @@
 
 .connectedAccount-2Jb-Z0 .connectedAccountOpenIcon-E5wGF4 {
   display: none;
+}
+
+[class*="jumpToPresentBar"] {
+  display: contents;
+}
+[class*="jumpToPresentBar"] > button:first-child {
+  display: none;
+}
+[class*="jumpToPresentBar"] > button:last-child {
+  position: absolute;
+  bottom: 24px; /* fixed the position relative to right part */
+  right: 22px; /* so it doesn't look so close/odd */
+  padding: 8px !important;
+  height: auto;
+  background-color: var(
+    --background-secondary
+  ); /* changed color to darker gray */
+  /*box-shadow: var(--elevation-high); I don't like the shadow */
+  border-radius: 100px;
+  display: flex;
+  font-size: 0;
+  color: transparent;
+  transition: font-size 0.2s 0.1s, color 0.2s, padding 0.4s 0.1s;
+}
+[class*="jumpToPresentBar"] > button svg {
+  order: -1;
+  margin: 0;
+  height: 24px;
+  width: 24px;
+  top: unset;
+  margin-right: 4px;
+  margin-left: 0;
+  margin-right: 0;
+  color: var(--text-normal);
+  transition: margin 0.6s;
+}
+
+[class*="jumpToPresentBar"]:hover > button {
+  padding: 8px 18px !important;
+  font-size: 14px;
+  color: var(--text-normal);
+  transition: font-size 0.2s, color 0.2s 0.1s, padding 0.4s;
+}
+[class*="jumpToPresentBar"]:hover > button svg {
+  margin-right: 2px;
+  margin-left: -6px;
+}
+.menu-1QACrS, .colorDefault-CDqZdO { 
+  border-radius: 15px; 
+}
+.base-2v-uc0 {
+  transition: all 0.5s;
+}
+.base-2v-uc0:hover {
+  transition: all 0s;
+  transform: scale(1.02);
+}
+.header-3OsQeK {
+  box-shadow: none;
+}
+
+.animatedContainer-2laTjx {
+  box-shadow: none;
+}
+
+.animatedContainer-2laTjx::before {
+  background: linear-gradient(transparent 0%, var(--background-secondary) 100%, transparent 0%);
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 100%;
+  bottom: 0;
+  z-index: 1;
+}
+.winButtonClose-3Q8ZH5 {
+  margin-right: 5px;
+}
+.winButtonClose-3Q8ZH5::after {
+  padding: 6px;
+  background-image: url("https://i.imgur.com/WAbJScJ.png");
+  background-size: 100%;
+}
+.winButtonClose-3Q8ZH5:hover::after {
+  background-image: url("https://i.imgur.com/ipwGE9a.png");
+  background-size: 100%;
+}
+.winButtonMinMax-3RsPUg:nth-child(3)::after {
+  background-color: #faa61a;
+  padding: 5px;
+}
+.winButtonMinMax-3RsPUg:nth-child(3):hover::after {
+  background-color: #faa81ae5;
+}
+.winButtonMinMax-3RsPUg:last-child {
+  color: #43b581;
+}
+.winButtonMinMax-3RsPUg:last-child:hover {
+  color: #43b582e3;
+}
+.winButtonMinMax-3RsPUg:last-child rect {
+  height: 3px;
+  rx: 2px;
+}
+.winButton-3UMjdg:not(:last-child) > svg {
+  display: none;
+}
+.winButton-3UMjdg:not(:last-child)::after {
+  content: "";
+  border-radius: 50px;
+  pointer-events: fill;
+}
+.winButton-3UMjdg:hover {
+  background-color: var(--background-tertiary);
 }
