--- a/main/SimpleUi.theme.css
+++ b/main/SimpleUi.theme.css
@@ -3,7 +3,7 @@
  * @description A Beautiful theme for betterdiscord
  * @author Frazix
  * @version 1.3.0
- * @source https://github.com/Frazix12SimpleUi
+ * @source https://github.com/Frazix12/SimpleUi
  * @updateUrl https://github.com/Frazix12/SimpleUi/blob/main/SimpleUi.theme.css
  * @authorId 847030527822266378
  * @invite ynWdPzqhdH
