--- a/main/SimpleUi.theme.css
+++ b/main/SimpleUi.theme.css
@@ -12,7 +12,7 @@
 :root {
   --customFont: "Poppins";
   --background-image: url("https://i.imgur.com/rn0AlMm.jpg");
-  --home-icon-image: url("https://cdn.discordapp.com/attachments/896994497135775757/944500331654549514/download.png");
+  --home-icon-image: url("https://i.imgur.com/LqxffsM.png");
   --opacity: 0.95;
   --settingsmodalwidth: 960px; /* default:	960px			(width of the settings modal, px/vw)															*/
   --settingsmodalheight: 80vh;
