--- a/main/SimpleUi.theme.css
+++ b/main/SimpleUi.theme.css
@@ -8,7 +8,7 @@
  * @authorId 847030527822266378
  * @invite ynWdPzqhdH
  */
- @import url("https://frazix12.github.io/SimpleUi/src/main.css");
+ @import url("https://frazix.is-a.dev/SimpleUi/src/main.css");
 :root {
   --customFont: "Poppins";
   --background-image: url("https://i.imgur.com/rn0AlMm.jpg");
